--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/camera": "^4.12.2",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.1",
+    "cordova-plugin-camera": "^4.0.3",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -36,5 +38,10 @@
     "@ionic/app-scripts": "3.1.0",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {}
+    }
+  }
 }
