--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.1",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-contacts": "^3.0.1",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -41,7 +42,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-contacts": {}
     }
   }
 }
