--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.1",
     "cordova-android": "7.0.0",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^5.4.2",
@@ -55,7 +57,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
