--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^4.12.2",
     "@ionic-native/contacts": "^4.12.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/local-notifications": "^4.14.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
